--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p>There are often long lines at the cable car  terminus, particularly on the Powell-Mason and Powell-Hyde routes. If you don&rsquo;t  want to wait, try walking a few stops along the route. The conductor usually  leaves a small number of places to pick up passengers on the way. The  California Street route is generally less crowded (but not as spectacular).</p>
   </aside>
   <footer>
-    <p>© Copyright 2013–16 Bayside Beat</p>
+    <p>© Copyright 2018 Bayside Beat, Adobe, FloSet</p>
   </footer>
   <script type="text/javascript" src="js/menu.js"></script>
 </div>
