--- a/Notwendige Daten/Tätigkeit.html
+++ b/Notwendige Daten/Tätigkeit.html
@@ -17,7 +17,7 @@
 		<div class="logo">Informatik - SIV.AG</div>
 		<nav>
 			<ul>
-				<li><a href="../Informatik - SIV.AG.html"><span>Unternehmen</span></a></li>
+				<li><a href="../index.html"><span>Unternehmen</span></a></li>
 				<li><a class="active"><span>Praktikumstätigkeiten</span></a></li>
 				<li><a href="Kontakt.html"><span>Kontakt</span></a></li>
 			</ul>
