--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <nav>
       <ul>
         <li><a class="active"><span>Unternehmen</span></a></li>
-        <li><a href="Notwendige%20Daten/T%C3%A4tigkeit.html"><span>Praktikumstätigkeiten</span></a></li>
-        <li><a href="Notwendige%20Daten/Kontakt.html"><span>Kontakt</span></a></li>
+        <li><a href="T%C3%A4tigkeit"><span>Praktikumstätigkeiten</span></a></li>
+        <li><a href="Kontakt"><span>Kontakt</span></a></li>
       </ul>
     </nav>
     <div class="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></div>
