--- a/Notwendige Daten/Kontakt.html
+++ b/Notwendige Daten/Kontakt.html
@@ -53,7 +53,7 @@
 		<div class="logo">Informatik - SIV.AG</div>
 		<nav>
 			<ul>
-				<li><a href="../"><span>Unternehmen</span></a></li>
+				<li><a href="../index.html"><span>Unternehmen</span></a></li>
 				<li><a href="T%C3%A4tigkeit.html"><span>Praktikumstätigkeiten</span></a></li>
 				<li><a class="active"><span>Kontakt</span></a></li>
 			</ul>
