--- a/Neujahr/index.html
+++ b/Neujahr/index.html
@@ -33,8 +33,8 @@
 </head>
 
 <body>
-<p id="timer"></p>
-<script>
+<p id="timer">2019!</p>
+<--<script>
 /* <![CDATA[ */
 // Set the date we're counting down to
 var countDownDate = new Date("Jan 1, 2019 00:00:00").getTime();
@@ -85,6 +85,6 @@ var x = setInterval(function() {
     }
 }, 1000);
 /*]]>*/
-</script>
+</script>-->
 </body>
 </html>
