--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 		<img width="700px" alt="SIV Unternehmenszentrale" src="Notwendige%20Daten/Unternehmenszentrale%20SIV.AG.png" class="imgBild">
 		<figcaption class="imgCaption" id="imgZentraleCaption">Unternehmenszentrale</figcaption>
 	</figure>
-	  <p id="pGeschichte2" class="lastElement">2009 begann die Entwicklung der neuen Hauptversion kVASy 5 mit neuen Features wie kVASy Power Sales für Kosteneffizienz und neue Servicequalität. Im Jahr 2016 trat die SIV.AG® als erstes europäisches Unternehmen der kanadischen Harris Group bei. Heute beschäftigt das Unternehmen rund 400 Mitarbeiter, setzte im Jahr 2017 37,879 Millionen Euro um und betreut über 300 mittelständische und große Unternehmen. Außerdem ist das Unternehmen zum dritten Mal in Folge Titelträger „TOP Ausbildungsbetrieb" der IHK zu Rostock. Die Firma sitzt ein wenig außerhalb von Rostock in einem kleinen Industriegebiet mit guter Internetanbindung. Eine gute Verkehrsanbindung ist vorhanden, wobei diese nicht benötigt wird, da die Produkte über die Internetleitung ausgeliefert werden.</p>   
+	  <p id="pGeschichte2" class="lastElement">2009 begann die Entwicklung der neuen Hauptversion kVASy 5 mit neuen Features wie kVASy Power Sales für Kosteneffizienz und neue Servicequalität. Im Jahr 2016 trat die SIV.AG<sup>&reg;</sup> als erstes europäisches Unternehmen der kanadischen Harris Group bei. Heute beschäftigt das Unternehmen rund 400 Mitarbeiter, setzte im Jahr 2017 37,879 Millionen Euro um und betreut über 300 mittelständische und große Unternehmen. Außerdem ist das Unternehmen zum dritten Mal in Folge Titelträger „TOP Ausbildungsbetrieb" der IHK zu Rostock. Die Firma sitzt ein wenig außerhalb von Rostock in einem kleinen Industriegebiet mit guter Internetanbindung. Eine gute Verkehrsanbindung ist vorhanden, wobei diese nicht benötigt wird, da die Produkte über die Internetleitung ausgeliefert werden.</p>   
   </div>
 </div>
 <footer>
   <div class="center">
-    <p> &#xA9; Florian Schmidtke, 2018</p>
+    <p> &#xA9; Florian Schmidtke, 2019</p>
   </div>
 </footer>
 
